ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail11.mligo
let t12 = fun (x : int list) ->
  match x with
  | hd::(hd2::tl) -> hd + hd2
  | [] -> 0